Fix z-index of nav #3

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -18,6 +18,8 @@ header {
       @apply w-full h-screen bg-primary absolute top-0 -right-full flex flex-col text-center pb-28 pt-16 lg:static lg:bg-transparent lg:h-auto lg:w-auto lg:flex-row lg:py-0;
 
       @media screen and (max-width: 1023px) {
+        @apply z-30;
+
         transition: right .2s ease;
 
         &.open {
@@ -39,7 +41,7 @@ header {
     }
 
     .menu-button {
-      @apply w-8 h-7 p-1 flex flex-col justify-between lg:hidden absolute right-4;
+      @apply z-40 w-8 h-7 p-1 flex flex-col justify-between lg:hidden absolute right-4;
 
       transform: translateY(50%);
 
